[package]
name = "ironclad"
version = "0.2.1"
authors = ["Evan Conley <econmang@gmail.com>",
           "Jacob Cromwell <cromwellj@sou.edu>"]

[lib]
name = "iron_lib"
path = "src/lib.rs"

[dependencies]
rusoto_core = "0.32.0"
rusoto_kms = "0.32.0"
rusoto_credential = "0.8.0"
rusoto_iam = "0.32.0"
rusoto_dynamodb = "0.32.0"
clap = "2.26.0"
